config/service.yml
kind: Service
apiVersion: v1
metadata:
  name: lars-eirik
  namespace: apps
  labels:
    k8s-app: lars-eirik
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: lars-eirik
  type: ClusterIP
  ipFamilyPolicy: SingleStack
