config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lars-eirik-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "app.motoren.site"
    http:
      paths:
      - pathType: Prefix
        path: "/lars-eirik"
        backend:
          service:
            name: lars-eirik
            port:
              number: 80
